# loudgain

./: CMakeLists.txt  README.md  index.html
debian/: changelog  control  copyright  gbp.conf  rules  watch
docs/: loudgain.1  loudgain.1.md  r128gain.1  r128gain.1.md
src/: loudgain.c  printf.c  printf.h  r128gain.c  scan.c  scan.h  tag.cc  tag.h  util.h
